# lab-manual

./: .gitignore  CLAUDE.md  README.md  catchfile.sty  checklist.js  compile.sh  everysel.sty  fancyhdr.sty  ifmtarg.sty  jeremy_office.skp  lab-manual.css  lab_manual.blg  lab_manual.tex  logo ideas.ai  paralist.sty  pgfrcs.sty  pyproject.toml  ragged2e.sty  setup-cdl-bot.sh  toc.js  tufte.cfg
.github/workflows/: build-html.yml  compile-latex.yml
PSYC50/: syllabus.pages
blueprints/: Budget-Moore 416 Suite.xls  Manning Space - Annotated May 29.pptx  jeremy_office.skp  lab_layout.ai
cdl_bot/: .env.example  README.md  __init__.py  bot.py  cli.py  config.py  manifest.json  project_store.py  requirements.txt  startup_queue.py  storage.py
cdl_bot/data/: projects.json
cdl_bot/handlers/: onboard.py  schedule.py  website_approval.py  workflow_listener.py
cdl_bot/models/: __init__.py  onboarding_request.py  scheduling_session.py
cdl_bot/services/: bio_service.py  calendar_service.py  github_service.py  image_service.py  scheduling_service.py  website_service.py  when2meet_service.py
courses/: Teaching Request 2016 2017.doc
courses/COMP NEURO/: syllabus.txt
faculty poster/: 4-inch-300dpi.tif  brandeis seal.ai
job ads/: RA_LM.pages
lab logo/: logo ideas.ai  logo_v2.ai  logo_v4.ai
lab_logo/: logo_v3.ai
notes/: scheduling-bot-plan.md
resources/: FAQ.tex
scheduling/: ECoG_Journal_Club.ics
scripts/: cdl-environment.yml  setup.ps1  setup.sh
scripts/onboarding/: bot.py  (+6 more)
tests/: test_cdl_environment.py
website/: 2015_09-04_WebsiteQuestionnaire_CDL.docx
(+38 files in other folders)
